# ice-substrate

./: .gitignore  Cargo.toml  HEADER-GPL3  Makefile  README.md  add_rustfmt_hook.sh  rustfmt.toml  snow-raw.json
.githooks/: pre-commit
.github/: dependabot.yml  release-template.md
.github/ISSUE_TEMPLATE/: developer-grant-application.md  report-a-bug.md
.github/workflows/: build.yml  deploy.yml  docker-build.yml  realese_tag_manager.yml  release.yml  rust.yml  srtool.yml  test.yml  try-runtime.yml  upgrade-ctx-overall-tests.yml  upgrade-ctx-state-tests.yml
contracts/staking_rewards/: 3_months_deployment.txt  6_months_deployment.txt  Cargo.toml  README.md  lib.rs
contracts/time_lock/: Cargo.toml  lib.rs
docs/: parity-signer.md
docs/media/: parity-signer.md
frame/simple-inflation/: Cargo.toml
frame/simple-inflation/src/: lib.rs
integration-tests/: Cargo.toml
integration-tests/src/: assets.rs  lib.rs  mock.rs  vesting.rs  vesting_mock.rs
integration-tests/src/xcm/: kusama_cross_chain_xfer.rs  kusama_testnet.rs  rococo_cross_chain_xfer.rs  rococo_testnet.rs
node/: Cargo.toml
node/src/: cli.rs  command.rs  lib.rs  main.rs  primitives.rs  rpc.rs  service.rs  shell_upgrade.rs
node/src/chain_spec/: arctic.rs  frost.rs  mod.rs  snow.rs
node/src/rpc/: arctic.rs  frost.rs  mod.rs  snow.rs
node/src/service/: arctic.rs  frost.rs  mod.rs  parachain.rs  solo.rs
orml/utilities/: Cargo.toml
orml/xcm/: Cargo.toml
pallet/airdrop/: Cargo.toml
pallets/: Cargo.toml
pallets/airdrop/: Cargo.toml  test.sh
pallets/airdrop/src/: benchmarking.rs  exchange_accounts.rs  lib.rs  merkle.rs  mock.rs  non_vested_transfer.rs  tests-all.rs  tests.rs  transfer.rs  types.rs  utils.rs  vested_transfer.rs  weights.rs
pallets/airdrop/src/tests/: claim.rs  exchange_claim.rs  merkle_tests.rs  mock.rs  mod.rs  signature_validation.rs  transfer.rs  user_claim.rs  utility_functions.rs
pallets/airdrop/tests/: test_signature_validation.rs
pallets/fees-split/: Cargo.toml
pallets/fees-split/src/: lib.rs
pallets/mint/: Cargo.toml
pallets/mint-token/: Cargo.toml  lib.rs
pallets/mint-token/src/: lib.rs
pallets/mint/src/: lib.rs
pallets/simple-inflation/: Cargo.toml
pallets/simple-inflation/src/: lib.rs
pallets/src/: lib.rs
primitives/: Cargo.toml
resources/: arctic-karura.json  arctic-launch.json  arctic-statemine.json  arctic-testnet-raw.json  arctic-testnet.json  arctic-testrococo-raw.json  arctic-testrococo.json  frost-test.json  frost_testnet.json  frost_testnetRaw.json  snow-kusama.json  snow-laucnh.json  snow-launch.json  snow-plain.json  snow-rococo-local-raw.json  snow-rococo-local.json  snow-staging-rococo-raw.json  snow-staging-rococo.json  zombienet-config.toml
runtime/: Cargo.toml
runtime/arctic/: Cargo.toml
runtime/arctic/src/: constants.rs  impls.rs  lib.rs  precompile.rs  xcm_config.rs
runtime/arctic/src/weights/: cumulus_pallet_xcmp_queue_weight.rs  frame_system_weight.rs  mod.rs  pallet_airdrop_weight.rs  pallet_assets_weight.rs  pallet_balances_weight.rs  pallet_collective_weight.rs  pallet_contracts_weight.rs  pallet_democracy_weight.rs  pallet_elections_phragmen_weight.rs  pallet_identity_weight.rs  pallet_indices_weight.rs  pallet_membership_weight.rs  pallet_multisig_weight.rs  pallet_preimage_weight.rs  pallet_proxy_weight.rs  pallet_scheduler_weight.rs  pallet_timestamp_weight.rs  pallet_tips_weight.rs  pallet_utility_weight.rs  pallet_vesting_weight.rs
runtime/common/: Cargo.toml
runtime/common/assets-evm/: Cargo.toml
runtime/common/assets-evm-utils/: Cargo.toml
runtime/common/assets-evm-utils/assets-macro/: Cargo.toml
runtime/common/assets-evm-utils/assets-macro/src/: lib.rs
runtime/common/assets-evm-utils/src/: data.rs  lib.rs  tests.rs
runtime/common/assets-evm/src/: lib.rs  mock.rs  test_utils.rs  tests.rs
runtime/common/src/: lib.rs  precompile.rs
runtime/common/src/weights/: mod.rs  pallet_airdrop_weight.rs  pallet_balances_weight.rs  pallet_grandpa_weight.rs  pallet_multisig_weight.rs  pallet_proxy_weight.rs  pallet_timestamp_weight.rs  pallet_utility_weight.rs
runtime/frost/: Cargo.toml  build.rs
runtime/frost/src/: constants.rs  impls.rs  lib.rs  precompile.rs
runtime/frost/src/weights/: pallet_airdrop_weight.rs  pallet_assets_weight.rs  pallet_contracts_weight.rs  pallet_democracy_weight.rs  pallet_grandpa_weight.rs  pallet_identity_weight.rs  pallet_indices_weight.rs  pallet_membership_weight.rs  pallet_multisig_weight.rs  pallet_preimage_weight.rs  pallet_proxy_weight.rs  pallet_scheduler_weight.rs  pallet_timestamp_weight.rs  pallet_tips_weight.rs  pallet_utility_weight.rs  pallet_vesting_weight.rs
runtime/integration-tests/: Cargo.toml
runtime/integration-tests/src/: kusama_testnet.rs  lib.rs  relay.rs  rococo_cross_chain_xfer.rs  rococo_testnet.rs
runtime/snow/: Cargo.toml
runtime/snow/src/: constants.rs  impls.rs  lib.rs  precompile.rs  xcm_config.rs
runtime/snow/src/weights/: frame_system_weight.rs  mod.rs  pallet_assets_weight.rs  pallet_balances_weight.rs  pallet_bounties_weight.rs  pallet_collective_weight.rs  pallet_contracts_weight.rs  pallet_democracy_weight.rs  pallet_elections_phragmen_weight.rs  pallet_indices_weight.rs  pallet_multisig_weight.rs  pallet_preimage_weight.rs  pallet_proxy_weight.rs  pallet_timestamp_weight.rs  pallet_utility_weight.rs  pallet_vesting_weight.rs
runtime/src/: impls.rs  inflation.rs  lib.rs  mock.rs  test.rs
scripts/: Dockerfile  add_rustfmt_hook.sh  autotag.sh  benchmark.sh  init.sh  rpcrestart.sh
ts-tests/: .env.sample  .mocharc.json  README.md  package.json  tsconfig.json
ts-tests/ink/assets/largeCtx/valid/: Cargo.toml  constants.rs  contract_data.rs  lib.rs  snow_rewards.contract  snow_rewards.wasm
xcm-integration-tests/: Cargo.toml
xcm-integration-tests/src/: kusama_cross_chain_xfer.rs  kusama_testnet.rs  lib.rs  para.rs  relay.rs  rococo_cross_chain_xfer.rs  rococo_testnet.rs  testrelaywitharctic_cross_chain_xfer.rs  testrelaywitharctic_testnet.rs  testrelaywithtestpara_cross_chain_xfer.rs  testrelaywithtestpara_testnet.rs
(+170 files in other folders)
