[profile.release]
panic = 'unwind'

[workspace]
members = [
    "node",
    "runtime/snow",
    "runtime/arctic",
    "runtime/frost",
    "runtime/common/*",
    "pallets/airdrop",
    "pallets/fees-split",
    "pallets/simple-inflation",
    "integration-tests",
    "xcm-integration-tests",
    "contracts/staking_rewards",
]

