[package]
authors = ['ICE Team <https://icenetwork.io>']
description = 'ICE Network is an EVM compatible network built with Substrate framework'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'integration-tests'
repository = 'https://github.com/web3labs/ice-substrate/'
version = '0.0.2'
publish = false


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
arctic-runtime = { path = "../runtime/arctic" }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24", default-features = false }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24", default-features = false }

serde = { version = "1.0.138", optional = true, features = ["derive"] }

frame-support = { branch = "polkadot-v0.9.24", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { branch = "polkadot-v0.9.24", default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate" }

# orml
orml-asset-registry = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.24" }
orml-tokens = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.24" }
orml-traits = { default-features = false, git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v0.9.24" }

pallet-assets = {  branch = "polkadot-v0.9.24", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { branch = "polkadot-v0.9.24", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-membership = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
pallet-vesting = {  branch = "polkadot-v0.9.24", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.24" }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.24" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.24" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }

kusama-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
kusama-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
rococo-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
xcm-simulator = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }

sp-core = {  branch = "polkadot-v0.9.24", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.24", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { branch = "polkadot-v0.9.24", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { branch = "polkadot-v0.9.24", default-features = false, git = "https://github.com/paritytech/substrate" }

scale-info = { version = "2.0.1", default-features = false, features = [
	"derive",
] }

substrate-wasm-builder = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }

[dev-dependencies]
env_logger = "0.9.1"

[features]
default = ["std"]
manual-seal = []
std = [
	"codec/std",
	"serde",

	"frame-support/std",
	"frame-system/std",

	"pallet-balances/std",
	"pallet-assets/std",
	"pallet-vesting/std",

	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-io/std",
	"scale-info/std",
]
try-runtime = ['frame-support/try-runtime']
