[package]
authors = ['ICE Team <https://icenetwork.io>']
build = 'build.rs'
description = 'ICE Network is an EVM compatible network built with Substrate framework'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'ice-node'
repository = 'https://github.com/web3labs/ice-substrate'
version = '0.3.1'
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
structopt = "0.3.8"
async-trait = "0.1"
clap = { version = "3.0", features = ["derive"] }
jsonrpc-pubsub = "18.0.0"
futures = "0.3"
log = "0.4.8"
serde_json = "1.0"
hex-literal = "0.3.4"


sc-cli = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sp-core = {  branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sc-executor = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-service = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-telemetry = {branch = "polkadot-v0.9.17",  git = "https://github.com/paritytech/substrate" }
sc-keystore = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = {branch = "polkadot-v0.9.17",  git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = {branch = "polkadot-v0.9.17",  git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sp-consensus = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sc-consensus = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sc-consensus-manual-seal = {branch = "polkadot-v0.9.17",  git = "https://github.com/paritytech/substrate" }
sc-network = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = {branch = "polkadot-v0.9.17",  git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = {branch = "polkadot-v0.9.17",  git = "https://github.com/paritytech/substrate" }
sc-client-api = {branch = "polkadot-v0.9.17",  git = "https://github.com/paritytech/substrate" }
sp-runtime = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sp-timestamp = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sp-inherents = {branch = "polkadot-v0.9.17",  git = "https://github.com/paritytech/substrate" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sp-api = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sp-blockchain = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sp-block-builder = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = {branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }

fc-consensus = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17"}
fp-consensus = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17"}
fp-storage = { git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17" }

fc-rpc = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17" }
fp-rpc = { git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17"}
fc-rpc-core = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17" }
fc-db = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17" }
fc-mapping-sync = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17" }

pallet-evm = {  default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17" }
pallet-ethereum = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17" }
pallet-dynamic-fee = {  default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17" }
pallet-base-fee = {  default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.17" }

ice-runtime = { path = "../runtime", default-features = false, features = ["std"] }

[build-dependencies]
substrate-build-script-utils = { branch = "polkadot-v0.9.17", git = "https://github.com/paritytech/substrate" }

[features]
aura = ['ice-runtime/aura']
default = ['aura']
manual-seal = ['ice-runtime/manual-seal']
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = ['ice-runtime/runtime-benchmarks']
