[package]
authors = ['ICE Team <https://icenetwork.io>']
build = 'build.rs'
description = 'ICE Network is an EVM compatible network built with Substrate framework'
edition = '2021'
homepage = 'https://substrate.dev'
license = 'Apache-2.0'
name = 'ice-node'
repository = 'https://github.com/web3labs/ice-substrate'
version = '0.4.56'
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
structopt = "0.3.8"
async-trait = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
clap = { version = "3.2", features = ["derive"] }
jsonrpc-pubsub = "18.0.0"
jsonrpsee = { version = "0.13.0", features = ["server"] }
futures = "0.3"
log = "0.4.8"
serde_json = "1.0"
hex-literal = "0.3.4"
tracing-core = "=0.1.26"

# primitives
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-trie= { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-keystore= { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }


sc-executor = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-service = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate", features = ["wasmtime"] }
sc-telemetry = {branch = "polkadot-v0.9.24",  git = "https://github.com/paritytech/substrate" }
sc-keystore = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = {branch = "polkadot-v0.9.24",  git = "https://github.com/paritytech/substrate" }
sc-transaction-pool-api = {branch = "polkadot-v0.9.24",  git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }
sc-consensus = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }
sc-consensus-manual-seal = {branch = "polkadot-v0.9.24",  git = "https://github.com/paritytech/substrate" }
sc-network = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = {branch = "polkadot-v0.9.24",  git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = {branch = "polkadot-v0.9.24",  git = "https://github.com/paritytech/substrate" }
sc-client-api = {branch = "polkadot-v0.9.24",  git = "https://github.com/paritytech/substrate" }
sc-sysinfo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }


# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

pallet-transaction-payment-rpc = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }
pallet-contracts-rpc = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }

# client dependencies
sc-client-db = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }


# CLI-specific dependencies
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", optional = true }

# cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }


cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }

cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.24" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

# polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.24", optional = true }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.24" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { branch = "polkadot-v0.9.24", git = "https://github.com/paritytech/substrate" }

fc-consensus = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24"}
fp-consensus = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24"}
fp-storage = { git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24" }

fc-rpc = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24" }
fp-rpc = { git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24"}
fc-rpc-core = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24" }
fc-db = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24" }
fc-mapping-sync = {  git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24" }

pallet-evm = {  default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24" }
pallet-ethereum = { default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24" }
pallet-dynamic-fee = {  default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24" }
pallet-base-fee = {  default-features = false, git = "https://github.com/web3labs/frontier", branch = "polkadot-v0.9.24" }

snow-runtime = { path = "../runtime/snow", default-features = false, features = ["std"] }
arctic-runtime = { path = "../runtime/arctic", default-features = false, features = ["std"] }
frost-runtime = { path = "../runtime/frost", default-features = false, features = ["std"] }

# local pallets
pallet-simple-inflation = { path = "../pallets/simple-inflation", default-features = false, features = ["std"] }
pallet-fees-split = { path  = "../pallets/fees-split", default-features = false, features = ["std"] }

# try-runtime
frame-try-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", optional = true }
try-runtime-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", optional = true }

[build-dependencies]
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", optional = true }
build-script-utils = { package = "substrate-build-script-utils", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

[features]
default = [
    "cli",
    "aura",
    "sc-service",
    "sc-service/db",
]

cli = [
    'sc-cli',
    'polkadot-cli',
    'try-runtime-cli',
]

try-runtime = [
	"frost-runtime/try-runtime",
	"arctic-runtime/try-runtime",
	"snow-runtime/try-runtime",
]

aura = [
    'frost-runtime/aura',
    'arctic-runtime/aura',
]
manual-seal = ['frost-runtime/manual-seal']
rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]

runtime-benchmarks = [
    "polkadot-service/runtime-benchmarks",
	"frost-runtime/runtime-benchmarks",
	"arctic-runtime/runtime-benchmarks",
    "snow-runtime/runtime-benchmarks",
]

